tests/baselines/reference/pathMappingBasedModuleResolution7_classic(strict=true).errors.txt
c:/root/src/file1.ts(4,18): error TS7010: 'use', which lacks return-type annotation, implicitly has an 'any' return type.


==== c:/root/src/tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "baseUrl": "../",
            "paths": {
                "*": [
                    "*",
                    "c:/shared/*"
                ],
                "templates/*": [
                    "generated/src/templates/*"
                ]
            },
            "rootDirs": [
                ".",
                "../generated/src"
            ]
        }
    }
    
==== c:/root/src/file1.ts (1 errors) ====
    import {x} from "./project/file2";
    import {y} from "module3";
    
    declare function use(x: string);
                     ~~~
!!! error TS7010: 'use', which lacks return-type annotation, implicitly has an 'any' return type.
    use(x.toFixed());
    use(y.toFixed());
    
==== c:/root/src/file3.d.ts (0 errors) ====
    export let x: number;
    
==== c:/root/generated/src/project/file2.ts (0 errors) ====
    import {a} from "module1";
    import {b} from "templates/module2";
    import {x as c} from "../file3";
    export let x = a + b + c;
    
==== c:/shared/module1.d.ts (0 errors) ====
    export let a: number
    
==== c:/root/generated/src/templates/module2.ts (0 errors) ====
    export let b: number;
    
==== c:/module3.d.ts (0 errors) ====
    export let y: number;
    
    